# bff-study

./: .gitignore  CLAUDE.md  README.md  add-bff-lambda-plan.md  docker-compose.yml
api-gateway/: pom.xml
api-gateway/src/main/java/com/example/apigateway/: ApiGatewayApplication.java
api-gateway/src/main/resources/: application.yml
backend/: pom.xml
backend/src/main/resources/: application.yml
bff/: Dockerfile  pom.xml
bff-fastapi/: .gitignore  README.md  config.py  main.py  pyproject.toml  run.py
bff-fastapi/routers/: auth.py  training.py
bff/src/main/resources/: application-aws.yml  application-test.yml  application.yml  application.yml-EXAMPLE
docs/: AWS_MIGRATION_PLAN.md  BFF_LAMBDA_MIGRATION.md  FIX_LOG_20250803.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/trainings/: page.tsx
frontend/src/app/trainings/[id]/: page.tsx
frontend/src/app/trainings/new/: page.tsx
frontend/src/components/: Header.tsx
infrastructure/cdk/: .gitignore  README.md  cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
infrastructure/cdk/lib/: auth-stack.ts  backend-stack.ts  bff-ecs-stack.ts  bff-stack.ts  frontend-stack.ts  network-stack.ts
keycloak/docs/: README.md
keycloak/import/: training-realm.json
services/bff-lambda/: README.md  docker-compose.yml  pom.xml
services/bff-lambda/src/main/resources/: application.yml
(+29 files in other folders)
