[project]
name = "bff-fastapi"
version = "0.1.0"
description = "FastAPI BFF for Training App with KeyCloak OAuth2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "authlib>=1.2.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "starlette>=0.27.0",
    "itsdangerous>=2.1.0",
]
